force-app/main/default/objects/AIPIIFieldMetadata__c/AIPIIFieldMetadata__c.object-meta.xml
<CustomObject>
    <description>Child record per classified field, Master-Detail to AIPIIRegistry__c. This is what the runtime masking logic actually queries — zero callouts at runtime, since classification is synced here ahead of time.</description>
    <label>AI PII Field Metadata</label>
    <nameField>
        <label>AI PII Field Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>🏷️ AI PII Field Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>