force-app/main/default/objects/AIPIIFieldMetadata__c/fields/ComplianceGroup__c.field-meta.xml
<CustomField>
    <fullName>ComplianceGroup__c</fullName>
    <description>The raw classification value from the org&apos;s Data Classification settings.</description>
    <inlineHelpText>Set automatically during sync, reflecting exactly what&apos;s configured in Setup.</inlineHelpText>
    <label>Compliance Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>