force-app/main/default/objects/AIPIIFieldMetadata__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <description>The field&apos;s data type, cached from FieldDefinition.</description>
    <inlineHelpText>Set automatically during sync.</inlineHelpText>
    <label>Data Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>