force-app/main/default/objects/AIPIIFieldMetadata__c/fields/FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIName__c</fullName>
    <description>The field this row classifies.</description>
    <inlineHelpText>Set automatically during sync.</inlineHelpText>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>