force-app/main/default/objects/AIPIIFieldMetadata__c/fields/FieldKey__c.field-meta.xml
<CustomField>
    <fullName>FieldKey__c</fullName>
    <description>Composite key (Object API Name + Field API Name) used as the upsert match key during sync.</description>
    <externalId>true</externalId>
    <inlineHelpText>System-generated during sync; do not edit manually.</inlineHelpText>
    <label>Field Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>