force-app/main/default/objects/AIPIIFieldMetadata__c/fields/FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>FieldLabel__c</fullName>
    <description>The field&apos;s human-readable label, cached from Setup.</description>
    <inlineHelpText>Set automatically during sync.</inlineHelpText>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>