force-app/main/default/objects/AIPIIFieldMetadata__c/fields/IsPII__c.field-meta.xml
<CustomField>
    <fullName>IsPII__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Derived — true when Compliance Group contains PII.</description>
    <inlineHelpText>This is the field the runtime masking logic actually checks when deciding what to mask.</inlineHelpText>
    <label>Is PII</label>
    <type>Checkbox</type>
</CustomField>