force-app/main/default/objects/AIPIIFieldMetadata__c/fields/LastSynced__c.field-meta.xml
<CustomField>
    <fullName>LastSynced__c</fullName>
    <description>When this specific field row was last confirmed.</description>
    <inlineHelpText>Updated automatically on each successful sync.</inlineHelpText>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>