force-app/main/default/objects/AIPIIFieldMetadata__c/fields/PIIFieldType__c.field-meta.xml
<CustomField>
    <fullName>PIIFieldType__c</fullName>
    <description>The kind of PII this field represents, decided once by AIPiiFieldTypeClassifier during the Tooling API sync.</description>
    <inlineHelpText>Set automatically during sync based on the field&apos;s name, label, data type, and Compliance Group. Blank means the field isn&apos;t recognized as a specific PII type.</inlineHelpText>
    <label>PII Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>Bank Account</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Date of Birth</fullName>
            </value>
            <value>
                <fullName>IP Address</fullName>
            </value>
            <value>
                <fullName>Government ID</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>