force-app/main/default/objects/AIPIIFieldMetadata__c/fields/PIIRegistry__c.field-meta.xml
<CustomField>
    <fullName>PIIRegistry__c</fullName>
    <description>The parent object registry record.</description>
    <inlineHelpText>Deleted automatically if the parent registry record is deleted.</inlineHelpText>
    <label>PII Registry</label>
    <referenceTo>AIPIIRegistry__c</referenceTo>
    <relationshipLabel>AI PII Field Metadata</relationshipLabel>
    <relationshipName>AI_PII_Field_Metadata</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>